--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^7.0.2",
     "npm": "^9.6.2",
     "ts-node": "^10.9.1",
+    "typescript": "^5.0.2",
     "tsc": "^2.0.4",
     "validator": "^13.9.0"
   },
