--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "compile": "tsc",
-    "start": "npm run compile && node ./dist/index.js",
+    "start": "node ./dist/index.js",
     "dev": "npx nodemon ./index.ts"
   },
   "author": "",
