--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "compile": "tsc",
+    "compile": "npm install; tsc",
     "start": "node ./dist/index.js",
     "dev": "npx nodemon ./index.ts"
   },
