--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "compile": "npm install; tsc",
+    "compile": "npm i ",
     "start": "node ./dist/index.js",
     "dev": "npx nodemon ./index.ts"
   },
@@ -24,7 +24,6 @@
     "mongoose": "^7.0.2",
     "npm": "^9.6.2",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.2",
     "tsc": "^2.0.4",
     "validator": "^13.9.0"
   },
