--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc",
     "compile": "npm i ",
     "start": "node ./dist/index.js",
-    "dev": "npx nodemon ./index.ts"
+    "dev": "npx nodemon ./index.ts",
+    "test": "npm run build&& mocha dist/**/*.test.js"
   },
   "author": "",
   "license": "ISC",
@@ -27,9 +28,15 @@
     "validator": "^13.9.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.4",
     "@types/express": "^4.17.17",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^18.15.5",
+    "@types/sinon": "^10.0.13",
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0",
     "nodemon": "^2.0.21",
+    "sinon": "^15.0.2",
     "typescript": "^5.0.2"
   }
 }
