--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "es-dirname": "^0.1.0",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
     "graphql-fields": "^2.0.3",
